--- a/src/Home.css
+++ b/src/Home.css
@@ -18,7 +18,7 @@
   }
   
 #bcolor{
-    background-color: rgba(0, 44, 188, 0.813);
+    background-color: rgba(33, 12, 91, 0.813);
 }
 
 
@@ -38,11 +38,11 @@
     color: rgb(248, 248, 248);
 }
 .image-container {
-    width: 280px;
-    height: 280px;
+    width: 285px;
+    height: 285px;
     border-radius: 50%;
     overflow: hidden;
-    border: 4px solid #3498db; /* Border color */
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,12 +55,11 @@
 }
 
 .image-container img {
-    width: 150%;
+    width: 100%;
     height: 350px;
-    object-fit: cover;
-    object-position: 50% 80%;
+    object-fit: cover; /* or use 'contain' */
+    object-position: top; /* shifts focus toward the bottom */
 }
-
 
 
 .pages{
